# x-monitor-bot

./: .gitignore  CLAUDE.md  README.md  activate.bat  config.example.yaml  gui.bat  pyproject.toml  start.bat  test.bat
docs/superpowers/specs/: 2026-06-27-link-to-tg-design.md
scripts/: probe_scweet.py
src/: __init__.py  admin_gui.py  config.py  database.py  diagnose.py  discovery.py  downloader.py  main.py  oneshot.py  scheduler.py  sync_engine.py  telegram_bot.py  test_fetcher.py  test_telegram.py  verify_discovery.py
src/fetcher/: __init__.py  base.py  nitter_fxtwitter.py
src/source/: __init__.py  base.py  download.py  factory.py  fxtwitter.py  nitter.py  scweet.py
tests/: test_config.py  test_database.py  test_downloader.py  test_factory.py  test_fetcher.py  test_fxtwitter.py  test_oneshot.py  test_scheduler.py  test_source.py  test_sync_engine.py  test_telegram.py
