[project]
name = "x-monitor-bot"
version = "0.1.0"
description = "X (Twitter) media monitor bot — syncs subscribed accounts' media to Telegram"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "feedparser>=6.0",
    "scweet>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/admin_gui.py" = ["E402"]
"src/main.py" = ["E402"]
"src/test_telegram.py" = ["E402"]
"src/test_fetcher.py" = ["E402"]
"src/diagnose.py" = ["E402"]
"src/verify_discovery.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
